# api-gibtalk

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-api-gibtalk-docker-image.yml
media/: arasaac-symbols.yaml  mulberry-symbols.yaml
media/arasaac-symbols/: symbols.yaml
media/custom/: symbols.yaml
media/mulberry-symbols/: symbols.yaml
media/tawasol-symbols/: symbols.yaml
scripts/: build.sh  check-untagged.sh  convert-to-png.sh  push.sh  rename-tawasol.sh
src/: index.rs  main.rs
