[package]
name = "api-gibtalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
http = "0.2.9"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.4", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4.1"

[dev-dependencies]
hyper = "0.14"
